--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-<a [routerLink]="['Home']">Home</a>
-<a [routerLink]="['About']">About</a>
-<a [routerLink]="['Contact']">Contact</a>
+<a [routerLinkActive]="['active']" [routerLink]="['Home']">Home</a>
+<a [routerLinkActive]="['active']" [routerLink]="['About']">About</a>
+<a [routerLinkActive]="['active']" [routerLink]="['Contact']">Contact</a>
 </div>
 <div class="content">
   <router-outlet></router-outlet>
