--- a/src/app/pagenotfound/pagenotfound.component.html
+++ b/src/app/pagenotfound/pagenotfound.component.html
@@ -1,1 +1,4 @@
 <p>pagenotfound works!</p>
+<h2>404 Page not found bruv</h2>
+<!-- <a routerLink="/Home">Get back to the homepage</a> -->
+<button (click)="navigateHome()">Get back to the homepage</button>
